# familytree_cpp

./: .gitignore  CMakeLists.txt  Family.cpp  Family.hpp  FamilyTree.cpp  FamilyTree.hpp  Logger.cpp  Logger.hpp  Person.cpp  Person.hpp  README.md  Sample.json  Sample.txt  Utils.hpp  build.sh  generate.sh  main.cpp
src/: CMakeLists.txt  main.cpp
src/core/: Family.cpp  Family.hpp  FamilyTree.cpp  Person.cpp  Person.hpp
src/utils/: Logger.cpp  Logger.hpp  Utils.hpp
tests/: CMakeLists.txt  LoggerTest.cpp
